<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>iped</groupId>
    <artifactId>iped-parent</artifactId>
    <version>4.2.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>iped-api</module>
        <module>iped-utils</module>
        <module>iped-parsers</module>
        <module>iped-viewers</module>
        <module>iped-carvers</module>
        <module>iped-geo</module>
        <module>iped-engine</module>
        <module>iped-app</module>
        <module>iped-tests</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <resources.dir>${basedir}/resources</resources.dir>
        <release.dir>${project.build.directory}/release/iped-${project.version}</release.dir>
        <lib.dir>${release.dir}/lib</lib.dir>
        <tools.dir>${release.dir}/tools</tools.dir>
        <conf.dir>${release.dir}/conf</conf.dir>
        <plugin.dir>${release.dir}/../plugins</plugin.dir>
        <plugin.rsc>${basedir}/resources/plugins</plugin.rsc>

        <!--dependencies-->
        <tika.version>2.4.0</tika.version><!-- SyncMetadata change done in commit b673cf4 can be reverted when version is upgraded to include solution of https://issues.apache.org/jira/browse/TIKA-4126 -->
        <tika.core.version>2.4.0-p1</tika.core.version>
        <pdfbox.version>2.0.27</pdfbox.version>
        <lucene.version>9.2.0</lucene.version>
        <sleuthkit.version>4.12.0.p1</sleuthkit.version>
        <libreoffice.version>7.2.2</libreoffice.version>
        <slf4j.version>1.7.25</slf4j.version>
        <log4j.version>2.17.1</log4j.version>
        <junit.version>4.13.1</junit.version>
        <icepdf.version>7.0.0</icepdf.version>
        <java.dbx.version>1.1-p6</java.dbx.version>
        <xerial.sqlite.version>3.34.0</xerial.sqlite.version>
        <dockingframes.version>1.1.2</dockingframes.version>
        <telegram.version>1.0.13</telegram.version>
        <twelvemonkeys.version>3.10.1</twelvemonkeys.version>
        <bencode.version>1.4.1</bencode.version>
    </properties>

    <repositories>
    	<repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
        	<id>mvn-repo</id>
        	<url>https://gitlab.com/iped-project/iped-maven/raw/master</url>
        	<releases>
            	<enabled>true</enabled>
        	</releases>
        	<snapshots>
            	<enabled>true</enabled>
        	</snapshots>
    	</repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-web</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <forceJavacCompilerUse>false</forceJavacCompilerUse>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.13</version>
                <configuration>
                    <configLocation>${resources.dir}/checkstyle/asap-checker.xml</configLocation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.1</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
